Use String.isBlank() for the empty-host guard (Bug #75337)
Java 21 idiom; also handles Unicode whitespace.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>